# pyszn

./: .gitignore  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
doc/: conf.py  developer.rst  index.rst
lib/pyszn/: __init__.py  injection.py  parser.py
test/: test_find.py  test_injection.py  test_parser.py  test_pyszn.py
test/files/: badfile.py  topodef.py  topofile1.py  topofile2.py  topofile3.py
test/files/topologies/: btopo.szn
